[package]
name = "bible-lib"
version = "1.0.0"
edition = "2024"
authors = ["Eric <skepz.dev@gmail.com>"]
description = "A library for working with Bible verses in Rust."
license = "MIT"
keywords = ["bible", "verses", "religion", "christianity", "scripture"]
categories = ["value-formatting"]
repository = "https://github.com/sk3pz/bible-lib"
documentation = "https://docs.rs/bible-lib/latest/bible_lib/index.html"

[dependencies]
regex = { version = "*", optional = true }
rand = { version = "*", optional = true }

[features]
default = ["akjv", "asv", "erv", "kjv", "random"]
# enable detecting bible verses in strings with regex
detection = ["regex"] # disabled by default
# enable random verse selection
random = ["rand"] # enabled by default

# BIBLE TRANSLATIONS
# Each translation can be enabled/disabled to reduce binary size / memory footprint

# American King James Version
akjv = [] # enabled by default
# American Standard Version
asv = [] # enabled by default
# English Revised Version
erv = [] # enabled by default
# King James Version
kjv = [] # enabled by default