[package]
name = "bible-lib"
version = "1.1.0"
edition = "2024"
authors = ["Eric <skepz.dev@gmail.com>"]
description = "A library for working with Bible verses in Rust."
license = "MIT"
keywords = ["bible", "verses", "religion", "christianity", "scripture"]
categories = ["value-formatting"]
repository = "https://github.com/sk3pz/bible-lib"
documentation = "https://docs.rs/bible-lib/latest/bible_lib/index.html"
include = [
    "src/**",
    "bible_translations/*.txt",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
regex = { version = "1.11.2", optional = true }
rand = { version = "0.9.2", optional = true }

[features]
default = ["akjv", "asv", "erv", "kjv", "random"]
# enable detecting bible verses in strings with regex
detection = ["regex"] # disabled by default
# enable random verse selection
random = ["rand"] # enabled by default

# BIBLE TRANSLATIONS
# Each translation can be enabled/disabled to reduce binary size / memory footprint

# American King James Version
akjv = [] # enabled by default
# American Standard Version
asv = [] # enabled by default
# English Revised Version
erv = [] # enabled by default
# King James Version
kjv = [] # enabled by default